# rk-app

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ACHIEVEMENT_SUMMARY.md  AGENTS.md  BOARD_QUICKSTART.md  CITYPERSONS_QUICKSTART.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_FINAL_REPORT.md  CURRENT_STATUS_ANALYSIS.md  DELIVERABLES_PHASE1.md  Dockerfile  Dockerfile.rk3588  Dockerfile.test  Dockerfile.train  FINAL_CHECKLIST.md  GEMINI.md  HARDWARE_INTEGRATION_MANUAL.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  Makefile  OFFLINE_PIPELINE_INTEGRATION.md  PC_PERFORMANCE_REPORT.md  QUICK_START_GUIDE.md  QUICK_START_PHASE2.md  README.md  README_mcp.md  START_TRAINING.sh  VALIDATION_REPORT.md  docker-compose.dual-nic.yml  docker-compose.rk3588.yml  docker-compose.train.yml  mcp.config.json  prepare_datasets.py  (+10 more)
achievement_report/: report_data.json  技术成果报告.md  演示大纲.md  现场演示脚本.sh
apps/: __init__.py  benchmark_e2e_latency.py  benchmark_e2e_latency_optimized.py  config.py  config_loader.py  deprecation.py  exceptions.py  logger.py  model_meta.py  quick_test_optimized.py  yolov8_rknn_infer.py  yolov8_stream.py
artifacts/: .gitignore  CODE_INTEGRITY_REPORT.md  MAP_EVALUATION_FIXED.md  PIPELINE_VALIDATION_REPORT.md  PROJECT_REVIEW_REPORT.md  YOLO11N_PERSON_MAP_REPORT.md  bench_report.md  bench_summary.csv  bench_summary.json  board_deployment_success_report.md  board_ready_report.md  board_test_comprehensive_report_20260108.md  board_test_report_20260112.md  branch_cleanup_guide.md  bugfix_impact_analysis_20260112.md  bugfix_report_20260112.md  coco_person_map.json  coco_person_map_onnx.json  code_review_final_status_20260113.md  cpp_benchmark_report.md  cpp_bugfix_validation_20260112.md  cpp_video_inference_80map_20260112.md  cpp_vs_python_comparison_20260112.md  cpp_vs_python_final_truth_20260112.md  deployment_status.md  e2e_latency_analysis.md  fallback_bugfix_report_20260112.md  ffprobe.json  full_pipeline_report.md  iperf3.json  map_evaluation.md  map_metrics.json  model_validation_report.md  network_throughput_test_report.md  onnx_rknn_comparison.json  performance_comparison_20260111.csv  performance_metrics_20260111.json  performance_metrics_416.json  performance_report_20260111.md  performance_report_416.md  (+14 more)
bench/: bench_pid.cpp
cloud_training/: README.md  download_citypersons.sh  download_crowdhuman.sh  download_widerperson.sh  estimate_memory.py  export_onnx.sh  filter_coco_person.py  merge_datasets.sh  person.yaml  run_coco_full_lazy.sh  setup_autodl.sh  train.sh  train_90map.sh  train_90map_optimized.sh  train_citypersons_5090.sh  train_citypersons_china.sh  train_citypersons_v2.sh  train_coco_extreme.sh  train_crowdhuman.sh  train_log.txt  train_mot17.sh  train_runner.sh
config/: 10class_names.txt  app.yaml  classes.txt  classes_16.txt  detect.yaml  industrial_classes.txt  test_onnx.yaml  test_onnx_opset12.yaml
configs/: exp.yaml  industrial_v2_exp.yaml  mcp_servers.yaml  optimized_training.yaml  toolchain_versions.toml
datasets/: PEDESTRIAN_DATASET_GUIDE.md  coco_10class.yaml
deploy_rk3588/: README.md  dataset.txt  rknn_build.py  run_cpu.sh
diagnosis_20250909_115920/: improvement_suggestions.md
diagnosis_results/: data_health_report.txt
docker/: arm64-rknn-run.Dockerfile  docker-bake.hcl  rk3588-runtime.Dockerfile  rknn-build.Dockerfile  test.Dockerfile  train.Dockerfile  ubuntu22-rknn-build.Dockerfile  ubuntu24-rk3588-runtime.Dockerfile  ubuntu24-rknn-build.Dockerfile  x86-rknn-build.Dockerfile  x86-train.Dockerfile  x86-yolov8-train.Dockerfile
docs/: BOARD_DEPLOYMENT_SUMMARY.md  CITYPERSONS_FINETUNING_GUIDE.md  CONFIG_GUIDE.md  CUSTOM_DATASET_TRAINING_GUIDE.md  DEPLOYMENT_READY.md  DOCKER_TRAINING_GUIDE.md  ENVIRONMENT_REQUIREMENTS.md  GRADUATION_PROJECT_COMPLIANCE.md  GRADUATION_REQUIREMENTS.md  GRADUATION_TASK_COMPLIANCE_ANALYSIS.md  IMPROVEMENTS.md  NEXT_STEPS.md  PERFECT_DEPLOY_GUIDE.md  PERFORMANCE_ANALYSIS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RK3588_VALIDATION_CHECKLIST.md  RK3588行人检测_毕业设计说明书.docx  RKNN_DEPLOYMENT_STATUS.md  TEST_COVERAGE_REPORT.md  TEST_ISSUES_AND_FIXES.md  THESIS_IMPROVEMENT_REPORT.md  THESIS_README.md  UBUNTU22_COMPATIBILITY.md  thesis_chapter_01_introduction.md  thesis_chapter_06_integration.md  thesis_chapter_07_conclusion.md  thesis_chapter_deployment.md  thesis_chapter_performance.md  thesis_chapter_system_design.md  thesis_defense_ppt_outline.md  thesis_defense_speech.md  开题报告.docx  项目流程框图.md
examples/: bench_dfl_optimized.cpp  bench_e2e_cpp.cpp  detect_cli.cpp  detect_pipeline.cpp  detect_rknn_multicore.cpp  recv_rtp_h264.py  rk_agent.py  send_rtp_h264.sh  simple_agent.py  test_api.py  test_bugfix.cpp
include/: log.hpp  pid.h  pid_controller.h
industrial_dataset/: data.yaml
logs/: tcp_sink_20250909_094013.jsonl  tcp_sink_20250909_094712.jsonl  tcp_sink_20251027_164307.jsonl
mcp_dev/: __init__.py  __main__.py
mcp_docker/: __init__.py  __main__.py
mcp_git_summary/: __main__.py
output/: test_result.json
scripts/: README.md  apply_dfl_optimization.sh  auto_train_pedestrian.sh  auto_tune_pid.py  bench_infer_sweep.py  build_cpp_board.sh  build_dfl_bench_board.sh  build_dfl_bench_cross.sh  camera_simulator.py  check_agent_sdk.sh  check_env.sh  check_paths.py  check_redundancy.sh  compare_onnx_rknn.py  convert_rknn.sh  delete_low_priority_branches.sh  demo_80classes.py  deploy_benchmark.sh  download_coco.sh  evaluate_map.py  export_and_ort_bench.py  fix_docker.sh  fix_hardcoded_paths.sh  full_validation.sh  generate_performance_report.py  monitor_training.sh  net_perf_check.sh  precision_fix_training.sh  prepare_industrial_dataset.sh  prepare_person_dataset.py  quick_data_diagnosis.sh  results_receiver.py  run_bench.sh  run_board_benchmark.sh  run_rknn_sim.py  run_x86.sh  setup_docker_wsl.sh  sync_sysroot.sh  (+8 more)
src/: pid.cpp  (+2 more)
tests/cpp/: CMakeLists.txt  test_csi_source.cpp  test_dmabuf.cpp  test_pipeline_factory.cpp  test_preprocess.cpp  test_preprocess_enhancements.cpp  test_rknn_decode.cpp  test_rknn_infer_consistency.cpp
(+2152 files in other folders)
