[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rk3588-pedestrian-detection"
version = "1.1.0"
description = "RK3588 Pedestrian Detection Module with YOLO and RKNN NPU Acceleration"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "North University of China"}
]
keywords = ["RK3588", "YOLO", "RKNN", "NPU", "object-detection", "pedestrian-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0,<2.0",
    "opencv-python-headless==4.9.0.80",
    "pillow==11.3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "pytest-mock>=3.11.1",
    "black>=23.10.0",
    "pylint>=2.18.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
]
board = [
    "PyYAML>=6.0,<7.0",
    "rknn-toolkit-lite2>=2.3.2",
]
train = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "onnxruntime==1.18.1",
    "pandas>=1.5.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/minsea01/rk-app"
Documentation = "https://github.com/minsea01/rk-app/tree/main/docs"
Repository = "https://github.com/minsea01/rk-app"
Issues = "https://github.com/minsea01/rk-app/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["archive/*", "build/*", "dist/*"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # Invalid name (for short variable names)
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "archive/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_hardware: Tests requiring RK3588 hardware",
    "requires_model: Tests requiring model files",
]

[tool.coverage.run]
source = ["apps", "tools"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
